--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-<link rel="stylesheet" href="static\css\style1.css">
+<link rel="stylesheet" href="static\css\style.css">
 <title>Car resale value</title>
 <meta charset="UTF-8">
 </head>
