--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,23 +1,25 @@
-  body{
-      margin: 0;
-      font-family :'Alegreya';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
-  }
- h1{
+body{
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+}
+
+h1{
     border-width: thick;
     border-color: black;
     color: white;
     text-shadow: 4px 4px 16px black;
-  }
+ }
 
- h2{
+h2{
     border-width: thick;
     border-color: black;
     color: white;
     text-shadow: 10px 10px 40px white;
-  }
+ }
 
- h4{
+h4{
      border-width: thick;
     border-color: black;
     color: black;
@@ -56,7 +58,7 @@ select {
   }
 
   button {
-    font-family :'Alegreya';
+    font-family: 'Poppins', sans-serif;
     font-weight: 600;
     width: 30%;
     background: rgb(31, 30, 30);
