--- a/templates/index.html
+++ b/templates/index.html
@@ -1,210 +1,137 @@
-<!DOCTYPE html>
-<!--=== Coding by CodingLab | www.codinglabweb.com === -->
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!----======== CSS ======== -->
-    <link rel="stylesheet" href="static\css\style.css">
-     
-    <!----===== Iconscout CSS ===== -->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+/* ===== Google Font Import - Poppins ===== */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+body{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #4070f4;
+}
+.container{
+    position: relative;
+    max-width: 1200px;
+    width: 100%;
+    border-radius: 6px;
+    padding: 30px;
+    margin: 0 15px;
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+}
+.container header{
+    position: relative;
+    font-size: 20px;
+    font-weight: 600;
+    color: #333;
+}
 
-    <!--<title>Responsive Regisration Form </title>--> 
-</head>
+.container header::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    height: 3px;
+    width: 27px;
+    border-radius: 8px;
+    background-color: #4070f4;
+}
+.container form{
+    position: relative;
+    margin-top: 16px;
+    min-height: 490px;
+    background-color: #fff;
+    overflow: hidden;
+}
 
-<body>
-    <div class="container">
-        <header>GET THE ACCURATE RESALE VALUE OF YOUR CAR</header>
+.container form .fields{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+form .fields .input-field{
+    display: flex;
+    width: calc(100% / 3 - 15px);
+    flex-direction: column;
+    margin: 4px 0;
+}
+.input-field label{
+    font-size: 12px;
+    font-weight: 500;
+    color: #2e2e2e;
+}
+.input-field input, select{
+    outline: none;
+    font-size: 14px;
+    font-weight: 400;
+    color: #333;
+    border-radius: 5px;
+    border: 1px solid #aaa;
+    padding: 0 15px;
+    height: 42px;
+    margin: 8px 0;
+}
+.input-field input :focus,
+.input-field select:focus{
+    box-shadow: 0 3px 6px rgba(0,0,0,0.13);
+}
+.input-field select,
 
-        <form method="post" accept-charset="utf-8" name="Modelform">
+.input-field input[type="number"]{
+    color: #707070;
+}
+.input-field input[type="number"]:valid{
+    color: #333;
+}
+.container form button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 45px;
+    max-width: 200px;
+    width: 100%;
+    border: none;
+    outline: none;
+    color: #fff;
+    border-radius: 5px;
+    margin: 25px 0;
+    background-color: #4070f4;
+    transition: all 0.3s linear;
+    cursor: pointer;
+}
 
-            <div class="form first">
-                <div class="details personal">
-                    <span class="title">Car Features</span>
+.container form .btnText{
+    font-size: 14px;
+    font-weight: 400;
+}
 
-                    <div class="fields">
+form button:hover{
+    background-color: #265df2;
+}
 
-                        <div class="input-field">
-                            <label>Select the Brand:</label>
-                            <select class="selectpicker form-control" id="company" name="company" required="1" onchange="load_car_models(this.id,'car_models')">
-                                {% for company in companies %}
-                                <option value="{{ company }}">{{ company }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
+form .button {
+    margin-right: 14px;
+}
 
-                        <div class="input-field">
-                            <label>Select the Model:</label>
-                            <select class="selectpicker form-control" id="car_models" name="car_models" required="1"> </select>
-                        </div>
-
-                        <div class="input-field">
-                            <label>Select the VehicleType:</label>
-                            <select class="selectpicker form-control" id="vehicle_type" name="vehicle_type" required="1">
-                                {% for vehicle_type in vehicle_types %}
-                                <option value="{{ vehicle_type }}">{{ vehicle_type }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-
-                        <div class="input-field">
-                            <label>Select the Gear Type:</label>
-                            <select class="selectpicker form-control" id="gear" name="gear" required="1">
-                                {% for gear in gears %}
-                                <option value="{{ gear }}">{{ gear }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-
-                        <div class="input-field">
-                            <label>Select the Fuel Type:</label>
-                            <select class="selectpicker form-control" id="fuel_type" name="fuel_type" required="1">
-                                {% for fuel in fuel_types %}
-                                <option value="{{ fuel }}">{{ fuel }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-
-                        <div class="input-field">
-                            <label>Power of Car in PS:</label>
-                            <input type="number" class="form-control" id="ps" name="ps" placeholder="Enter the Number Power of Car in PS, Not greater than 2000">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="details ID">
-                    <span class="title">Usage Details</span>
-
-                    <div class="fields">
-                        <div class="input-field">
-                            <label>Kilometres Driven</label>
-                            <input type="number" class="form-control" id="kilo_driven" name="kilo_driven" placeholder="Enter the Number Power of Car in PS, Not greater than 2000">
-                        </div>
-
-                        <div class="input-field">
-                            <label>Damaged or Repaired</label>
-                            <select class="selectpicker form-control" id="damaged" name="damaged" required="1">
-                                {% for damaged in damages %}
-                                <option value="{{ damaged }}">{{ damaged }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-
-                        <div class="input-field">
-                            <label>Manufactured Month</label>
-                            <select class="selectpicker form-control" id="month" name="month" required="1">
-                                {% for month in months %}
-                                <option value="{{ month }}">{{ month }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-
-                        <div class="input-field">
-                            <label>Manufactured Year</label>
-                            <select class="selectpicker form-control" id="year" name="year" required="1">
-                                {% for year in years %}
-                                <option value="{{ year }}">{{ year }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-
-
-
-                    </div>
-
-                    <button class="sumbit" onclick="send_data()">
-                            <span class="btnText">PREDICT</span>
-                    </button>
-
-                        <div class="input-field">
-                           <h2 style="color:#008000;"><span id="prediction"></span></h2>
-                        </div>
-
-                    </div>
-                </div>
-            </form>
-    </div>
-
-
-<script>
-const form = document.querySelector("form"),
-        nextBtn = form.querySelector(".nextBtn"),
-        backBtn = form.querySelector(".backBtn"),
-        allInput = form.querySelectorAll(".first input");
-
-
-nextBtn.addEventListener("click", ()=> {
-    allInput.forEach(input => {
-        if(input.value != ""){
-            form.classList.add('secActive');
-        }else{
-            form.classList.remove('secActive');
-        }
-    })
-})
-
-backBtn.addEventListener("click", () => form.classList.remove('secActive'));
-</script>
-
-
-
-
-<script>
-
-    function load_car_models(company_id,car_model_id)
-    {
-        var company=document.getElementById(company_id);
-        var car_model= document.getElementById(car_model_id);
-        console.log(company.value);
-        car_model.value="";
-        car_model.innerHTML="";
-        {% for company in companies %}
-            if( company.value == "{{ company }}")
-            {
-                {% for model in car_models %}
-                    {% if company in model %}
-
-                        var newOption= document.createElement("option");
-                        newOption.value="{{ model }}";
-                        newOption.innerHTML="{{ model }}";
-                        car_model.options.add(newOption);
-                    {% endif %}
-                {% endfor %}
-            }
-        {% endfor %}
+@media (max-width: 750px) {
+    .container form{
+        overflow-y: scroll;
     }
-
-    function form_handler(event) {
-        event.preventDefault(); // Don't submit the form normally
+    .container form::-webkit-scrollbar{
+       display: none;
     }
-    function send_data()
-    {
-        document.querySelector('form').addEventListener("submit",form_handler);
-
-        var fd=new FormData(document.querySelector('form'));
-
-        var xhr= new XMLHttpRequest({mozSystem: true});
-
-        xhr.open('POST','/predict',true);
-        document.getElementById('prediction').innerHTML="Wait! Predicting Price.....";
-        xhr.onreadystatechange = function(){
-            if(xhr.readyState == XMLHttpRequest.DONE){
-                document.getElementById('prediction').innerHTML="The Resale Value Predicted is: ₹"+xhr.responseText;
-
-            }
-        };
-
-        xhr.onload= function(){};
-
-        xhr.send(fd);
+    form .fields .input-field{
+        width: calc(100% / 2 - 15px);
     }
-</script>
+}
 
-
-
-
-</body>
-</html>
+@media (max-width: 550px) {
+    form .fields .input-field{
+        width: 100%;
+    }
+}
