--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,137 +1,85 @@
-/* ===== Google Font Import - Poppins ===== */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
 body{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #4070f4;
-}
-.container{
-    position: relative;
-    max-width: 1200px;
-    width: 100%;
-    border-radius: 6px;
-    padding: 30px;
-    margin: 0 15px;
-    background-color: #fff;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-}
-.container header{
-    position: relative;
-    font-size: 20px;
-    font-weight: 600;
-    color: #333;
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
 }
 
-.container header::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -2px;
-    height: 3px;
-    width: 27px;
-    border-radius: 8px;
-    background-color: #4070f4;
-}
-.container form{
-    position: relative;
-    margin-top: 16px;
-    min-height: 490px;
-    background-color: #fff;
-    overflow: hidden;
-}
+h1{
+    border-width: thick;
+    border-color: black;
+    color: white;
+    text-shadow: 4px 4px 16px black;
+ }
 
-.container form .fields{
+h2{
+    border-width: thick;
+    border-color: black;
+    color: white;
+    text-shadow: 10px 10px 40px white;
+ }
+
+h4{
+     border-width: thick;
+    border-color: black;
+    color: black;
+    text-align: center;
+    text-shadow: 4px 4px 16px white;
+ }
+
+.form{
+  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    text-align: Left;
+    padding:20px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-form .fields .input-field{
-    display: flex;
-    width: calc(100% / 3 - 15px);
     flex-direction: column;
-    margin: 4px 0;
-}
-.input-field label{
-    font-size: 12px;
-    font-weight: 500;
-    color: #2e2e2e;
-}
-.input-field input, select{
-    outline: none;
-    font-size: 14px;
-    font-weight: 400;
-    color: #333;
-    border-radius: 5px;
-    border: 1px solid #aaa;
-    padding: 0 15px;
-    height: 42px;
-    margin: 8px 0;
-}
-.input-field input :focus,
-.input-field select:focus{
-    box-shadow: 0 3px 6px rgba(0,0,0,0.13);
-}
-.input-field select,
-
-.input-field input[type="number"]{
-    color: #707070;
-}
-.input-field input[type="number"]:valid{
-    color: #333;
-}
-.container form button{
-    display: flex;
     align-items: center;
-    justify-content: center;
-    height: 45px;
-    max-width: 200px;
+    font-size:20px;
+  }
+
+  input[type=text] {
     width: 100%;
+    padding: 10px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+  }
+
+select {
+    width: 100%;
+    padding: 10px 20px;
     border: none;
-    outline: none;
-    color: #fff;
-    border-radius: 5px;
-    margin: 25px 0;
-    background-color: #4070f4;
-    transition: all 0.3s linear;
+    border-radius: 10px;
+    background-color: #f1f1f1;
+ }
+
+
+button {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    width: 30%;
+    background: rgb(31, 30, 30);
+    color:white;
+    font-size: 20px;
+    font-width: thick;
+    padding: 15px 15px;
+    margin: 8px 10px;
+    border: none;
+    align-items: center;
+    border-radius: 10px;
     cursor: pointer;
-}
+    border-shadow: 4px 4px 16px white;
+  }
 
-.container form .btnText{
-    font-size: 14px;
-    font-weight: 400;
-}
-
-form button:hover{
-    background-color: #265df2;
-}
-
-form .button {
-    margin-right: 14px;
-}
-
-@media (max-width: 750px) {
-    .container form{
-        overflow-y: scroll;
-    }
-    .container form::-webkit-scrollbar{
-       display: none;
-    }
-    form .fields .input-field{
-        width: calc(100% / 2 - 15px);
-    }
-}
-
-@media (max-width: 550px) {
-    form .fields .input-field{
-        width: 100%;
-    }
-}
+   input[type=submit]:hover {
+    background-color: #37853b;
+  }
+  
+*{
+  color:black;
+  }
